# arb-bot

./: .gitignore  README.md  app.py  backlog.txt  pytest.ini  run_live.sh
arb_bot/: .env.example  README.md  __init__.py  analytics_store.py  auto_tuner.py  balance_refresh.py  baseline_lock.py  binary_math.py  bucket_quality.py  capacity_controller.py  circuit_breaker.py  config.py  control_socket.py  correlation.py  crash_recovery.py  cross_mapping.py  cross_mapping_generator.py  dedupe.py  dependency_discovery.py  drift_monitor.py  endpoint_breaker.py  engine.py  event_tree.py  execution_model.py  execution_policy.py  fee_model.py  fill_model.py  kalshi_stream_preflight.py  keepalive_probes.py  kelly_sizing.py  lane_allocator.py  latency_slo.py  liquidity_impact.py  loss_cap.py  main.py  mapping_qa.py  mapping_verifier.py  metrics.py  mode_degradation.py  models.py  (+19 more)
arb_bot/config/: cross_venue_diagnostics.json  cross_venue_map.example.csv  cross_venue_map.generated.csv  cross_venue_map.strict.csv  diagnostics.live.json  forecastex_conid_catalog.json  forecastex_kalshi_mapping.csv  forecastex_prices_20260212.csv  forecastex_symbols.csv  phase0_baseline.lock.json  structural_rules.debug.json  structural_rules.example.json  structural_rules.generated.v2.json  structural_rules.generated.v2_with_parity.json
arb_bot/crypto/: __init__.py  __main__.py  analyze_classifier.py  backfill_regime.py  backtest_garch.py  vpin.py  (+25 more)
arb_bot/rust/arb_engine_rs/: Cargo.toml  pyproject.toml
arb_bot/rust/arb_engine_rs/src/: binary_math.rs  eval_pipeline.rs  lib.rs  strategy.rs  types.rs
(+252 files in other folders)
